<?xml version="1.0" encoding="utf-8"?>

<!--  Strings,Colors Created By : Rakesh Manoharan, Pavan Trinath -->
<!--        Net ID 				: rxm143130, BXV131230 --> 
<!--        Course 				: CS6301 -->

<resources>

    <string name="app_name">Contacts</string>
    <string name="save_desc">Saves the contact</string>
    <string name="cancel_desc">Cancels to open contact list</string>
       <string name="edit_desc">To edit the contact</string>
    <string name="delete_desc">To delete the displayed contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_details">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name *</string>
    <string name="empty"></string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="email_address">e-Mail Address</string>
    <color name="TextColor">#66540E</color>
    <color name="highlightcolor">#77C9F2</color>
        <color name="phonenumbercolor">#6E696E</color>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_success">New Contact Added Successfully</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tableheadername">Name</string>
    <string name="tableheaderpno">Phone Number</string>
    <color name="background_color">#A5D6B8</color>
    <string name="back">&lt; Back</string>
    <string name="home">Home</string>

</resources>
